--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,9 +2,13 @@
 <resources>
 
     <string name="app_name">Picsaw</string>
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
+    
+    <string name="navigation_drawer_explore">Explore</string>
+    <string name="navigation_drawer_activity">Activity</string>
+    <string name="navigation_drawer_settings">Settings</string>
+    <string name="navigation_drawer_about">About Us</string>
+    
+    
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_example">Example action</string>
